fix directory in ci

--- a/.github/workflows/backend_pmd.yml
+++ b/.github/workflows/backend_pmd.yml
@@ -28,6 +28,6 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      working-directory: IndividualProject
+      working-directory: Backend
       run: mvn pmd:check -Dpmd.minimumPriority=1 -Dpmd.failOnViolation=true
 
