--- a/.github/workflows/backend_checkstyle.yml
+++ b/.github/workflows/backend_checkstyle.yml
@@ -28,5 +28,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      working-directory: IndividualProject
+      working-directory: Backend
       run: mvn -B checkstyle:check -Dcheckstyle.violationSeverity=warning
