--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -107,6 +107,27 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
+					<execution>
+					<id>jacoco-check</id>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					<phase>verify</phase>
+					<configuration>
+						<rules>
+							<rule>
+								<element>BUNDLE</element>
+								<limits>
+									<limit>
+										<counter>BRANCH</counter>
+										<value>COVEREDRATIO</value>
+										<minimum>0.0</minimum>
+									</limit>
+								</limits>
+							</rule>
+						</rules>
+					</configuration>
+				</execution>
 				</executions>
 			</plugin>
 		</plugins>
