--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Backend
+
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.csrf.enabled=true
