--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,4 +2,18 @@ spring.application.name=Backend
 
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.swagger-ui.tryItOutEnabled=true
-springdoc.swagger-ui.csrf.enabled=true
+springdoc.swagger-ui.csrf.enabled=false
+
+spring.dotenv.system-properties=true
+spring.dotenv.ignore-if-missing=false
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIENT_ID:${env.GOOGLE_OAUTH_CLIENT_ID:}}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET:${env.GOOGLE_OAUTH_CLIENT_SECRET:}}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+app.admin.emails=${ADMIN_EMAILS:${env.ADMIN_EMAILS:}}
