added db connection, crud to be updated

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,6 +7,11 @@ springdoc.swagger-ui.csrf.enabled=false
 spring.dotenv.system-properties=true
 spring.dotenv.ignore-if-missing=false
 
+# Database Configuration
+spring.datasource.url=${DB_URL:${env.DB_URL:}}
+spring.datasource.username=${DB_USER:${env.DB_USER:}}
+spring.datasource.password=${DB_PASSWORD:${env.DB_PASSWORD:}}
+
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIENT_ID:${env.GOOGLE_OAUTH_CLIENT_ID:}}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET:${env.GOOGLE_OAUTH_CLIENT_SECRET:}}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
