--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -68,6 +68,13 @@
 			<artifactId>spring-dotenv</artifactId>
 			<version>2.5.4</version>
 		</dependency>
+
+		<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <scope>runtime</scope>
+	</dependency>
+
 	</dependencies>
 
 	<build>
