--- a/Backend/.env.SAMPLE
+++ b/Backend/.env.SAMPLE
@@ -1,4 +1,8 @@
 GOOGLE_OAUTH_CLIENT_ID={oauth id here}
 GOOGLE_OAUTH_CLIENT_SECRET={oauth secret here}
 ADMIN_EMAILS=zc2856@columbia.edu,ls3311@columbia.edu,zw3099@columbia.edu,nj2560@columbia.edu
+
+DB_URL=jdbc:postgresql://localhost:5432/restroom_finder
+DB_USER={db username}
+DB_PASSWORD={db password}
 # remove .SAMPLE from the filename to use
