use in mem h2 database

--- a/Backend/.env.SAMPLE
+++ b/Backend/.env.SAMPLE
@@ -2,7 +2,9 @@ GOOGLE_OAUTH_CLIENT_ID={oauth id here}
 GOOGLE_OAUTH_CLIENT_SECRET={oauth secret here}
 ADMIN_EMAILS=zc2856@columbia.edu,ls3311@columbia.edu,zw3099@columbia.edu,nj2560@columbia.edu
 
-DB_URL=jdbc:postgresql://localhost:5432/restroom_finder
-DB_USER={db username}
-DB_PASSWORD={db password}
+# In application.properties, default is h2
+# SPRING_PROFILES_ACTIVE=h2
+DB_URL=jdbc:h2:mem:restroomdb
+DB_USER=sa
+DB_PASSWORD=
 # remove .SAMPLE from the filename to use
