--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,6 +7,8 @@ springdoc.swagger-ui.csrf.enabled=false
 spring.dotenv.system-properties=true
 spring.dotenv.ignore-if-missing=false
 
+spring.profiles.default=h2
+
 # Database Configuration
 spring.datasource.url=${DB_URL:${env.DB_URL:}}
 spring.datasource.username=${DB_USER:${env.DB_USER:}}
