--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.dotenv.system-properties=true
 spring.dotenv.ignore-if-missing=false
 
 spring.profiles.default=h2
+spring.h2.console.settings.web-allow-others=true
+
 
 # Database Configuration
 spring.datasource.url=${DB_URL:${env.DB_URL:}}
