--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:h2:mem:restroomdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH;DB_CLOSE_DELAY=-1
+spring.datasource.url=${DB_URL:jdbc:h2:mem:restroomdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH;DB_CLOSE_DELAY=-1}
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=${DB_USER:sa}
+spring.datasource.password=${DB_PASSWORD:password}
 
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:sql/schema.sql
