--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Deploy via Dokku git:sync
         run: |
-          ssh dokku@dokku.imfinethanku.me "sudo su; ddokku git:sync bathroom-v1 https://github.com/imnotmomo/dokku.git main && dokku ps:rebuild bathroom-v1"
+          ssh dokku@dokku.imfinethanku.me "dokku git:sync bathroom-v1 https://github.com/imnotmomo/dokku.git main && dokku ps:rebuild bathroom-v1"
